trying to fix port forwarding issue with remote docker host

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,5 +12,6 @@
     "settings": {
         "terminal.integrated.shell.linux": "/bin/zsh"
     },
-    "postCreateCommand": "yarn"
+    "postCreateCommand": "yarn",
+    "runArgs": ["-p", "10.123.123.31:3000:3000"]
 }
