--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-vscode-container",
+  "name": "life-tracker-container",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
