--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.8"
   },
   "scripts": {
     "start": "HOST=0.0.0.0 react-scripts start",
