--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "amazon-cognito-identity-js": "^3.2.4",
+    "password-validator": "^5.0.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.11.0",
